--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonp": "^0.2.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.9.6",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
